--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+#header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
