ヘッダーフッター作成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <a href="/">ロゴ</a>
   </div>
   <div class="link">
-    <ul>
+    <ul id="nav">
       <li>
         <a href="#">メニュー1</a>
       </li>
