--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,3 +21,23 @@
 }
 
 
+#header #nav{
+  display: flex;
+  list-style: none;
+}
+
+#header #nav li{
+  width: 140px;
+  text-align: center;
+  background-color: #333;
+  height: 50px;
+  line-height: 50px;
+  margin-right: 2px;
+}
+
+#header #nav li a{
+  text-decoration: none;
+  color: #fff;
+  padding: 20px
+  
+}
