--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@
 #header #nav li{
   width: 140px;
   text-align: center;
-  background-color: #333;
+  background-color: #e3acae;
   height: 50px;
   line-height: 50px;
   margin-right: 2px;
@@ -40,4 +40,17 @@
   color: #fff;
   padding: 20px
   
+}
+
+#footer{
+  text-align: center;
+  padding: 10px 0;
+  background-color: #69b076;
+  color: #fff;
+  font-size: 13px;
+  margin-top: 20px
+}
+
+#footer p{
+  margin: 0;
 }
