--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,15 @@
  *= require_self
  */
 
+img{
+  max-width: 100%;
+}
+
+body{
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
 #header{
   display: flex;
   align-items: center;
@@ -48,7 +57,7 @@
   background-color: #69b076;
   color: #fff;
   font-size: 13px;
-  margin-top: 20px
+  margin-top: 20px;
 }
 
 #footer p{
