--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -1,3 +1,56 @@
 // Place all the styles related to the user/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#homes-top {
+  .content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    
+    .content-block {
+      border: 2px solid #000;
+      padding: 20px;
+      width: 60%;
+      
+      
+      .content{
+        border: 2px solid #000;
+        padding: 15px;
+        margin-bottom: 10px;
+        .user-about{
+          display: flex;
+          .image{
+            width: 10%;
+          }
+          
+          .profile{
+            margin-left: 10px;
+            
+            .name{
+              font-weight: bold;
+              width: 100%;
+              margin-bottom: 15px;
+            }
+            .introduction{
+              width: 100%;
+              font-size: 13px;
+            }
+          }
+        }
+      }
+    }
+    .sidebar {
+      border: 2px solid #000;
+      width: 20%;
+      padding: 20px;
+      
+      .box{
+        background-color: #000;
+        width: 100px;
+        height: 100px;
+        margin: 10px auto;
+        
+      }
+    }
+  }
+}
