--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,2 +1,41 @@
-<h1>トップページ</h1>
-<p>Find me in app/views/user/homes/top.html.erb</p>
+<div class="content-wrapper">
+  <div class="content-block">
+    <% (1..10).each do |i| %>
+      <div class="content">
+        <div class="user-about">
+          <div class="image">
+            <%= image_tag "チョコクッキー.jpg" %>
+          </div>
+          <div class="profile">
+            <div class="name">
+              ゆいゆい
+            </div>
+            <div class="introduction">
+              お菓子作り得意
+            </div>
+          </div>
+        </div>
+        
+        <div class="user-post">
+          <p>これはサンプル</p>
+          <p>これはサンプル</p>
+        </div>
+        <div class="action-menu">
+          <div class="like">
+            
+          </div>
+          <div class="comment">
+            
+          </div>
+        </div>
+      </div>
+    <% end %>
+
+  </div>
+  <div class="sidebar">
+    <div class="box"></div>
+    <div class="box"></div>
+  </div>
+</div>
+
+
