新規投稿機能、ヘッダーのリンク設定

--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -8,13 +8,13 @@
     justify-content: space-between;
     
     .content-block {
-      border: 2px solid #000;
+      border: 2px solid #69b076;
       padding: 20px;
       width: 60%;
       
       
       .content{
-        border: 2px solid #000;
+        border: 2px solid #69b076;
         padding: 15px;
         margin-bottom: 10px;
         .user-about{
@@ -40,7 +40,7 @@
       }
     }
     .sidebar {
-      border: 2px solid #000;
+      border: 2px solid #69b076;
       width: 20%;
       padding: 20px;
       
