--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,15 +4,22 @@
   </div>
   <div class="link">
     <ul id="nav">
-      <li>
-        <a href="#">メニュー1</a>
-      </li>
-      <li>
-        <a href="#">メニュー2</a>
-      </li>
-      <li>
-        <a href="#">メニュー3</a>
-      </li>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to "新規投稿", new_post_path %>
+        </li>
+        <li>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+        </li> 
+      <% else %>
+        <li>
+          <%= link_to "新規登録", new_user_registration_path %>
+        </li> 
+        <li>
+          <%= link_to "ログイン", new_user_session_path %>
+        </li> 
+      <% end %>
+      
     </ul>
   </div>
 </div>
