--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header'%>
+    <%= render 'layouts/flash'%>
     <%= yield %>
     <%= render 'layouts/footer'%>
   </body>
