--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,7 +54,7 @@ body{
 #footer{
   text-align: center;
   padding: 10px 0;
-  background-color: #69b076;
+  background-color: #e3acae;
   color: #fff;
   font-size: 13px;
   margin-top: 20px;
