--- a/app/assets/stylesheets/user/posts.scss
+++ b/app/assets/stylesheets/user/posts.scss
@@ -1,3 +1,43 @@
 // Place all the styles related to the user/posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#posts-new{
+  form{
+    textarea{
+      width: 100%;
+      height: 300px;
+      padding: 5px;
+      border-radius: 5px;
+      border: 2px solid#69b076;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+    }
+    .submit-block{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 15px 0;
+      .button {
+        display       : inline-block;
+        border-radius : 3%;          /* 角丸       */
+        font-size     : 14pt;        /* 文字サイズ */
+        text-align    : center;      /* 文字位置   */
+        cursor        : pointer;     /* カーソル   */
+        padding       : 6px 25px;   /* 余白       */
+        background    : #69b076;     /* 背景色     */
+        color         : #ffffff;     /* 文字色     */
+        line-height   : 1em;         /* 1行の高さ  */
+        transition    : .3s;         /* なめらか変化 */
+        border        : 2px solid #69b076;    /* 枠の指定 */
+      }
+      .button:hover {
+        color         : #69b076;     /* 背景色     */
+        background    : #ffffff;     /* 文字色     */
+      }
+    }
+    
+    
+  }
+}
