--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,2 +1,11 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% if flash[:notice].present? %>
+  <div class="flash">
+    <div class="notice"><%= notice %></div>
+  </div>
+<% end %>
+
+<% if flash[:alert].present? %>
+  <div class="flash">
+    <div class="alert"><%= alert %></div>
+  </div>
+<% end %>
